# cmakeExampleExternalProjectAdd

./: .gitignore  CMakeLists.txt  DependenciesBuild.cmake  DependenciesBuild.cmake.in  LICENSE  README.md  main.cxx  make.sh  winmake.bat
.github/workflows/: linux.yml  macos.yml  windows.yml
property/: test1.txt
